# Health_Record_BlockChain

./: CMakeLists.txt  README.TXT  README.md  Record.cpp  Record.h  main.cpp
Base/: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  User.cpp  User.h
Users/: Doctor.cpp  Doctor.h  Patient.cpp  Patient.h
